# AJP-tool

./: .env.example  .gitignore  00_BuildOrder_JobAutoApply.docx  01_PRD_JobAutoApply.docx  02_TRD_JobAutoApply.docx  03_TDD_JobAutoApply.docx  04_UserStories_JobAutoApply.docx  05_SprintPlan_JobAutoApply.docx  06_CLI_Spec_JobAutoApply.docx  07_MasterCV_System.docx  CLAUDE.md  HANDOVER.md  INSTRUCTIONS.md  README.md  pyproject.toml
jobtool/: __init__.py  __main__.py  cli.py  config.py  db.py  interactive.py  master-cv-starter.json  models.py  review.py
jobtool/ai/: __init__.py  prompts.py  tailor.py
jobtool/renderer/: __init__.py  docx_renderer.py  pdf.py
jobtool/scrapers/: __init__.py  base.py  indeed.py  linkedin.py  reed.py
tests/: __init__.py  test_renderer.py  test_scrapers.py
tests/fixtures/: sample-master-cv.json
